--- a/jQuery练习/导航菜单/练习导航菜单.html
+++ b/jQuery练习/导航菜单/练习导航菜单.html
@@ -12,13 +12,13 @@
             list-style: none;
         }
 
-        div{
-            margin-top: 10px;
-            margin-left: 10px;
-        }
-        #d{
-            height: 30px;
-        }
+        /*div{*/
+            /*margin-top: 10px;*/
+            /*margin-left: 10px;*/
+        /*}*/
+        /*#d{*/
+            /*height: 30px;*/
+        /*}*/
         .f{
             background: gray;
             float: left;
