--- a/css3/九宫格双面图转换.html
+++ b/css3/九宫格双面图转换.html
@@ -70,7 +70,7 @@
 <script>
     var oContainer=document.getElementById("container");
     var aDiv=document.getElementsByTagName("div");
-    var aImg=document.getElementsByTagName("img")
+    var aImg=document.getElementsByTagName("img");
     var flag=0;
     oContainer.onclick=function(){
         flag++;
