--- a/css3/手风琴.html
+++ b/css3/手风琴.html
@@ -11,7 +11,7 @@
         #container{
             width: 940px;
             height: 300px;
-            position: relative;
+            position: relative;x
             margin: 50px auto;
             box-shadow: 2px 2px 10px gray;
         }
