--- a/css3/点击爆炸.html
+++ b/css3/点击爆炸.html
@@ -3,8 +3,115 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        #container{
+            width: 800px;
+            height: 450px;
+            background: red;
+            margin: 50px auto;
+            position: relative;
+        }
+        #button{
+            position: absolute;
+            bottom: 0px;
+            left: 50%;
+            margin-left: -50px;
+        }
+        #img{
+            width: 800px;
+            height: 450px;
+            background-image: url(friends/1.JPG);
+            position: relative;
+        }
+    </style>
 </head>
 <body>
+<div id="container">
+    <div id="img"></div>
+    <div id="button">
+        <button id="click">click</button>
+        <button id="bomb">bomb</button>
+    </div>
+</div>
+<script>
+    var oClick=document.getElementById("click");
+    var oBomb=document.getElementById("bomb");
+    var oImg=document.getElementById("img");
+    var iNow=0;
+    oClick.onclick=function(){
+        oImg.innerHTML="";       //每一次点击都会生成div，所以每一次点击，都先去除之前生产过的DIV
+        iNow++;
+        oImg.style.background="url(friends/"+(iNow)+".JPG)"; //整个背景是什么图
+        if(iNow==5){
+            iNow=0;
+        }
+        for(var i=0;i<5;i++){
+            for(var j=0;j<8;j++){
+                var oDiv=document.createElement("div");
+                oDiv.style.width=100+"px";
+                oDiv.style.height=90+"px";
+                oDiv.style.position="absolute";
+                oDiv.style.left=j*100+"px";
+                oDiv.style.top=i*90+"px";
+                oDiv.style.background="url(friends/"+(iNow+1)+".JPG)"+ (-j*100)+"px "+(-i*90)+"px";  //这个是变化的小div
+                oDiv.style.WebkitTransform="rotateY("+180+"deg)";     //先转一个180度，然后下面再转会零度，就可以持续在同一个方向旋转。
+                oDiv.style.WebkitBackfaceVisibility="hidden";   //然后旋转的时候，看不见背面。
+                oDiv.style.transition="all 1s ease";
+                oImg.appendChild(oDiv);
+            }
+        }
+        var aDiv=oImg.getElementsByTagName("div");
+        var index=0;
+        var timer1=setInterval(function(){
+            aDiv[index].style.WebkitTransform="rotateY("+0+"deg)";   //转回去
+            if(index==39){
+                clearInterval(timer1);
+            }
+            index++;
+        },20);
+    }
 
+
+    oBomb.onclick=function(){
+        oImg.innerHTML="";
+        iNow++;
+        for(var i=0;i<5;i++){
+            for(var j=0;j<8;j++){
+                var oDiv=document.createElement("div");
+                oDiv.style.width=100+"px";
+                oDiv.style.height=90+"px";
+                oDiv.style.position="absolute";
+                oDiv.style.left=j*100+"px";
+                oDiv.style.top=i*90+"px";
+                oDiv.style.background="url(friends/"+iNow+".JPG)"+(-j*100)+"px "+(-i*90)+"px";
+                oDiv.style.transition="all 1s ease";
+                oImg.appendChild(oDiv);
+            }
+        }
+        if(iNow==5){
+            iNow=0;
+        }
+        oImg.style.background="url(friends/"+(iNow+1)+".JPG)";
+        var aDiv=oImg.getElementsByTagName("div");
+        var index=0;
+        var timer2=setInterval(function(){
+            aDiv[index].style.left=random(-500,1000)+"px";  //给距离左边的范围，在范围内随意变化
+            aDiv[index].style.top=random(-500,1000)+"px";
+            aDiv[index].style.opacity=0;
+            aDiv[index].style.WebkitTransform="rotate("+360+"deg)";
+            if(index==39){
+                clearInterval(timer2);
+            }
+            index++;
+        },30)
+        function random(a,b){
+            return Math.ceil(Math.random()*(b-a)+a);
+        }
+    }
+</script>
 </body>
 </html>
