es6=>class,const,let,map,set

--- a/es6/set.html
+++ b/es6/set.html
@@ -56,14 +56,14 @@
 
 
     //方法二：用set自带的去重功能。
-    var arr=[1,1,3,2,4,4,3,2,1,"sss"];
-     var set=new Set(arr);
-    var values=set.values();
-var newArr=[];
-    for(value of values){
-    newArr.push(value);
-}
-    console.log(newArr);
+//    var arr=[1,1,3,2,4,4,3,2,1,"sss"];
+//     var set=new Set(arr);
+//    var values=set.values();
+//var newArr=[];
+//    for(value of values){
+//    newArr.push(value);
+//}
+//    console.log(newArr);
 
 
 
