--- a/移动端开发/网页布局之background的方法.html
+++ b/移动端开发/网页布局之background的方法.html
@@ -55,7 +55,7 @@
             }
             #img{
                 width: 100%;
-                padding-top: 50%;
+                padding-top: 56%;   /*this is the ratio of the img.It's not the latest height and width of div*/
                 height: 0;
                 background-image: url(img/01_s_2x.jpg);
             }
@@ -72,7 +72,7 @@
         @media (max-width: 480px) {
             #img{
                 width: 100%;
-                padding-top: 50%;
+                padding-top: 56%;
                 height: 0;
                 background-image: url(img/01_s.jpg);
             }
