17_html5新特性.html

--- a/reviewsss/17_html5新特性.html
+++ b/reviewsss/17_html5新特性.html
@@ -6,5 +6,5 @@
 6. 本地存储：localStorage和sessionStorage（可能会问和cookie）
 7. Canvas画布：
 var cvs = document.getElementById('canvas1');
-var cxt = cvs.getContext('2d');
+var cxt = cvs.getContext('2d');；
 
