--- a/react/jsx_hello.html
+++ b/react/jsx_hello.html
@@ -9,7 +9,7 @@
 
 <script src="react-15.3.1/build/react.js"></script>
 <script src="react-15.3.1/build/react-dom.js"></script>
-<script src="react-15.3.1/browser.js"></script>
+<script src="react-15.3.1/browser.js"></script>        <!--引入这个是为了能让在script里面写dom结构，然后能被浏览器解析出来-->
 
 <script type="text/babel">
     ReactDOM.render(
