基本类型和引用类型.html

--- a/测试/基本类型和引用类型.html
+++ b/测试/基本类型和引用类型.html
@@ -69,11 +69,11 @@ var person=new createPerson("mike");
 console.log(person.name);
 person=null;    //这里这么写，对吗？？
 
-function createPerson(a){
-    this.name=a;
-}
-var person=new createPerson("mike");
-console.log(person.name);
+//function createPerson(a){
+//    this.name=a;
+//}
+//var person=new createPerson("mike");
+//console.log(person.name);
 </script>
 </body>
 </html>
