--- a/vue/cart.html
+++ b/vue/cart.html
@@ -111,7 +111,7 @@
 
             totalPrice:function(){
                 var totalPrice=0;
-                this.items.forEach(function(value){
+                this.items.forEach(function(value){     //funcntion(value,index)
                     if(!value.flag){
                         totalPrice+=value.price;
                     }
