--- a/测试/浮点.html
+++ b/测试/浮点.html
@@ -25,7 +25,7 @@
 //console.log(typeof a);
 //    console.log(a);
 //    console.log(parseFloat(a));
-// console.log(parseFloat(b));   //为什么这个是解析为整数了？？
+// console.log(parseFloat(b));   //为什么这个是解析为整数了？？  才发现，这个b本来就是个整数啊，所以parseFloat之后还是整数啊。
 
     //转译字符
 //    console.log("he said,\"hey.\"")
@@ -36,9 +36,9 @@
 //    lang=lang+"script";
 //    console.log(lang);
 
-//    var a="love";
-//    a="loving";    //书上说字符串的值一旦创建不能改变，这里不是能改变吗？书上33页。
-//    console.log(a);
+    var a="love";
+    a="loving";    //书上说字符串的值一旦创建不能改变，这里不是能改变吗？书上33页。
+    console.log(a);
 
 
 //    var a=[1,34,44,55,66,34,56,78,5678,3456,432,1,467,4];
