九边形旋转.html

--- a/css3/九边形旋转.html
+++ b/css3/九边形旋转.html
@@ -25,7 +25,7 @@
             margin: 100px auto;
             position: relative;
             box-shadow: 4px 4px 20px pink;
-            -webkit-animation: run 4s ease infinite;
+            -webkit-animation: run 4s ease forwards;
         }
         @-webkit-keyframes run {
             100%{
