--- a/HTML5/两周免登陆.html
+++ b/HTML5/两周免登陆.html
@@ -5,18 +5,18 @@
     <title></title>
 </head>
 <body>
-<form id="form" action="随机彩票.html">
+<form id="form1" action="index.html">
     用户名：<input id="text" type="text"/><br><br>
     密&nbsp码：<input id="password" type="password"/><br><br>
     两周免登陆：<input id="checkbox" type="checkbox"/><br><br>
-    <input id="submit" type="submit"/>
+    <input id="submit1" type="submit"/>           <!--这里的id不要写submit这种关键字，不然用form表单记住不了账号密码-->
 </form>
 <script>
     var oText=document.getElementById("text");
     var oPassword=document.getElementById("password");
     var oCheckbox=document.getElementById("checkbox");
-    var oForm=document.getElementById("form");
-    var oSubmit=document.getElementById("submit");
+    var oForm=document.getElementById("form1");
+    var oSubmit=document.getElementById("submit1");
     function setCookie(key,value,day){
         var str=key+"="+value+";";
         if(day){
@@ -40,7 +40,7 @@
     }
 //    console.log(getCookie("name"));
 //    console.log(getCookie("names"));
-    oSubmit.onclick=function(){       //oForm.onsubmit相对应。    oSubmit.onclick
+    oForm.onsubmit=function(){       //oForm.onsubmit相对应。    oSubmit.onclick
         if(oCheckbox.checked){
             var name=oText.value;
             var psd=oPassword.value;
@@ -54,8 +54,8 @@
     if(names && passwords){
         oText.value=names;
         oPassword.value=passwords;
-//        oForm.submit();     //与上面相对应。  但是为什么这里的submit不好使？？而老师的代码里好使？？？
-        oSubmit.click();
+        oForm.submit();     //与上面相对应。  但是为什么这里的submit不好使？？而老师的代码里好使？？？
+//        oSubmit.click();
     }
 
 
