label text.html

--- a/锋利的JQ测试/label text.html
+++ b/锋利的JQ测试/label text.html
@@ -11,6 +11,9 @@
         strong{
             color:red;
         }
+        input{
+            color: lightgrey;
+        }
     </style>
 </head>
 <body>
