--- a/react/company.html
+++ b/react/company.html
@@ -28,7 +28,7 @@
 //    });
 
     var Select=React.createClass({
-        render:function(){
+        render:function(){               //render是一个React里的一个方法
             var msg=[];
             this.props.arr1.forEach(function(value,index){
                 msg.push( <label key={index}>
