--- a/测试/undefined.html
+++ b/测试/undefined.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title></title>
 </head>
+
+
+<input type="radio" value="male" name="sex"/>
+<input type="radio" value="female" name="sex"/>
+
 <body>
 <script>
 //    var message=undefined;
@@ -22,6 +27,11 @@
                 alert(a);    //此时的a弹出2，因为在这个作用域内，先去找a，在该function作用域内没有找到a，就会去外面找，外面有a，就用外面的a
          //如果外面没有a(就是没有声明a)或者声明了a，但是没有给a赋值(初始化)，此时的a也是undefined
             }());
+
+
+
+
+
 </script>
 </body>
 </html>
